<resources>
    <string name="app_name">DiceGames</string>
    <string name="roll_num_hint">Number of Sides</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="roll_data">Roll Data</string>
    <string name="roll_exclamation">Roll!</string>
    <string name="cheat_questionmark">Cheat?</string>
    <string name="rolling">Rolling!</string>
    <string name="back">Back</string>
    <string name="_20">20</string>
    <string name="Welcome">Welcome Traveler</string>
    <string name="to_making_the_die">Let\'s Make the Die</string>
    <string name="welcome_paragraph">Here you are free to make your own die, and perhaps cheat the system.</string>
    <string name="title_activity_roll">RollActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="_0">0%</string>
    <string name="_99">99%</string>
    <string name="cheat">Cheat%</string>
    <string name="negative1">-1</string>
    <string name="press_me">Press Me</string>
    <string name="roll">Roll</string>
    <string name="hidden">Hidden</string>
    <string name="hide">hide</string>
    <string name="dice_image_text">image of dice</string>
    <string name="empty_string" />
    <string name="shake">Shake!</string>
    <string name="sides">Sides</string>
</resources>